crates/uitest/fixtures/ty/def/trait_impl_explicit_qualified_trait_const_context.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/trait_impl_explicit_qualified_trait_const_context.fe
---
error[6-0003]: trait bound is not satisfied
  ┌─ trait_impl_explicit_qualified_trait_const_context.fe:9:22
  │
9 │     fn make(self) -> Slot<{ <Self as A>::N }>
  │                      ^^^^^^^^^^^^^^^^^^^^^^^^ `Self` doesn't implement `A`
